formulabar: fix css for accept / cancel formula
When editing formula buttons were misaligned

--- a/browser/css/spreadsheet.css
+++ b/browser/css/spreadsheet.css
@@ -264,7 +264,7 @@
 
 #formulabar > .root-container > .formulabar {
 	display: grid;
-	grid-template-columns: 110px 106px auto;
+	grid-template-columns: 110px 112px auto;
 	grid-template-rows: 30px;
 }
 
